add static folder

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 SERVER_PORT=8888
 
+NODE_ENV='production'
+
 MONGODB_URL =mongodb+srv://dbdotc:ZUomCRZUouZuYzHT@cluster0.zovpoof.mongodb.net/cocktail
 
